# ak-motor-control-sdk

./: .bazeliskrc  .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  install_ros2_jazzy.sh  package.xml
launch/: motor_control.launch.py
motor_control_sdk/lib/: BUILD.bazel  motor_specs.h
motor_control_sdk/lib/communication/: can_bus.cc  can_bus.h
motor_control_sdk/lib/communication/protocols/: BUILD.bazel  force_control_protocol.h  motor_reply.h  servo_protocol.h
motor_control_sdk/lib/driver/: BUILD.bazel  containers.h  motor_driver.cc  motor_driver.h
motor_control_sdk/lib/protocols/: force_control_protocol.h
motor_control_sdk/msg/: MotorState.msg
motor_control_sdk/msgs/: BUILD.bazel  MotorCommands.msg  MotorStates.msg  motor_msgs.h
msg/: MotorCommand.msg  MotorCommands.msg  MotorStates.msg
src/: motor_driver_node.cpp
tools/format/: BUILD.bazel
tools/lint/: .clang-tidy  BUILD.bazel  lint.sh  linters.bzl
