load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "ros2_interface_library",
    "cpp_ros2_interface_library",
)

ros2_interface_library(
    name = "cubemars_motor_msgs",
    srcs = [
        "//motor_control_sdk/msgs:MotorCommand.msg",
        "//motor_control_sdk/msgs:MotorCommands.msg",
        "//motor_control_sdk/msgs:MotorState.msg",
        "//motor_control_sdk/msgs:MotorStates.msg",
    ],
    deps = [
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_rcl_interfaces//:builtin_interfaces",
    ],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cc_motor_msgs",
    deps = [":cubemars_motor_msgs"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "motor_msgs",
    srcs = ["motor_msgs.h"],
    deps = [":cc_motor_msgs"],
    visibility = ["//visibility:public"],
)
