load("@rules_cc//cc:defs.bzl", "cc_library")
load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_library")

cc_library(
    name = "containers",
    srcs = ["containers.h"],
    deps = [
        "//motor_control_sdk/lib:motor_specs",
    ],
    visibility = ["//visibility:public"],
)

ros2_cpp_library(
    name = "motor_driver",
    srcs = ["motor_driver.cc"],
    hdrs = ["motor_driver.h"],
    deps = [
        ":containers",
        "//motor_control_sdk/msgs:motor_msgs",
        "//motor_control_sdk/lib/communication:can_bus",
        "//motor_control_sdk/lib/communication/protocols:motor_reply",
        "//motor_control_sdk/lib/communication/protocols:force_control_protocol",
        "@ros2_rclcpp//:rclcpp",
    ],
    visibility = ["//visibility:public"],
)
